--- a/hello/src/Styles/App.css
+++ b/hello/src/Styles/App.css
@@ -1,16 +1,17 @@
 *{
-  margin: 0;
-  padding: 0;
+  margin: 2px;
+  padding: 3px;
 
 }
 #root{
-  display: flex;
+
   justify-content: space-between;
 }
 .App{
-  width: 500 px;
-  height: 400 px;
-  background-color: #d0d3dd;
+  width: 1500px;
+  max-width: 100%;
+  margin: 0 auto;
+  background-color: #d2d5df;
 }
 .like {
   background-color: rgb(255, 0, 149);
@@ -21,10 +22,20 @@
   cursor: pointer;
 }
 .dislike {
+  
   background-color: rgb(0, 4, 255);
   color: white; 
   border-color: rgb(1, 5, 223);
   border-width: 2px ;
   border-style: solid;
   cursor: pointer;
+}
+.Post{
+  padding: 5%;
+  width: 1000px;
+  max-width: 94%;
+  
+  margin: 0 auto;
+  
+  background-color: #dfd2d6;
 }
