add meme of politech

--- a/hello/src/Components/UI/Switch/MySwitch.module.css
+++ b/hello/src/Components/UI/Switch/MySwitch.module.css
@@ -6,6 +6,10 @@
   background-color: #d6e4d7;
 }
 
+.text{
+  margin: 5px;
+  padding: 5px;
+}
 .switch {
   position: relative;
   display: inline-block;
